force-app/main/default/objects/CventEvents__DataTransferFilter__c/fields/CventEvents__AnswerTo__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__AnswerTo__c</fullName>
    <description>Stores either question or question tag stub.</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores either question or question tag stub.</inlineHelpText>
    <label>Answer To</label>
    <length>36</length>
    <type>Text</type>
</CustomField>