force-app/main/default/objects/CventEvents__DataTransferFilter__c/fields/CventEvents__CventField__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CventField__c</fullName>
    <description>Stores API name of the field used in filter.</description>
    <inlineHelpText>Stores API name of the field used in filter.</inlineHelpText>
    <label>Cvent Field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>