force-app/main/default/objects/CventEvents__DataTransferFilter__c/fields/CventEvents__Value__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Value__c</fullName>
    <label>Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>